tests/snapshots/test_examples__fail__basic.fly.snap
---
source: tests/test_examples.rs
expression: stderr
---
verification errors:
error: assertion failure
   ┌─ examples/fail/basic.fly:12:1
   │
12 │ assert p(t0)
   │ ^^^^^^^^^^^^
   │
   = counter example:
     Model { signature: Signature { sorts: [Id("thread")], relations: [RelationDecl { mutable: true, name: "p", args: [Id("thread")], typ: Bool }, RelationDecl { mutable: false, name: "q", args: [], typ: Bool }, RelationDecl { mutable: false, name: "t0", args: [], typ: Id("thread") }] }, universe: [1], interp: [Interpretation { shape: [1, 2], data: [0] }, Interpretation { shape: [2], data: [0] }, Interpretation { shape: [1], data: [0] }] }


